[FIX] - Fix scrollbar

--- a/ChamCongCLB/styles/globals.css
+++ b/ChamCongCLB/styles/globals.css
@@ -6,14 +6,28 @@
   --bg-dark-mode: #001529;
 }
 
-.css-jjhd74-MuiStack-root {
-  display: none !important;
+html,
+body {
+  overflow-x: hidden;
 }
 
-.css-m69qwo-MuiStack-root {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
+/* Tùy chỉnh thanh cuộn */
+::-webkit-scrollbar {
+  width: 8px; /* Độ rộng thanh cuộn */
+}
+
+::-webkit-scrollbar-track {
+  background: #f0f0f0; /* Màu nền track */
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888; /* Màu thanh cuộn */
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555; /* Màu khi hover */
 }
 
 .dark {
